# dioxus-base-path-issue

./: Cargo.toml  README.md
src/: lib.rs  main.rs  ssg.rs
