[package]
name = "base-path"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../dioxus/packages/dioxus", features = ["fullstack", "router"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["full"], optional = true }

[features]
default = []
server = ["dioxus/server", "tokio"]
web = ["dioxus/web"]

[[bin]]
name = "base-path"
path = "src/main.rs"

[[bin]]
name = "base-path-ssg"
path = "src/ssg.rs"
